@@ -3,21 +3,20 @@ package console.table;
 import console.Const;
 import org.junit.Assert;
 import org.junit.Test;
+import yankov.functional.ImmutableList;
 
-import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 public class TableParserTest {
     @Test
     public void parseCsvLine_WithoutQuotes_Succeed() {
         String line = "Column 1,Column 2,Column 3";
-        Optional<List<Cell<String>>> result = TableParser.parseCsvLine(line);
+        Optional<ImmutableList<Cell<String>>> result = TableParser.parseCsvLine(line);
 
-        List<String> expected = List.of("Column 1", "Column 2", "Column 3");
+        ImmutableList<String> expected = ImmutableList.from("Column 1", "Column 2", "Column 3");
 
         Assert.assertTrue(result.isPresent());
-        assertEqualsList(expected, result.get().stream().map(Cell::getValue).collect(Collectors.toList()));
+        Assert.assertTrue(expected.eq(result.get().stream().map(Cell::getValue).toList()));
         Assert.assertFalse(result.get().stream().allMatch(x -> isQuotesWrapped(x.toCsvString())));
         Assert.assertFalse(result.get().stream().allMatch(x -> isQuotesWrapped(x.toConsoleString())));
     }
@@ -25,12 +24,12 @@ public class TableParserTest {
     @Test
     public void parseCsvLine_WithAllQuotes_Succeed() {
         String line = "\"Column 1\",\"Column 2\",\"Column 3\"";
-        Optional<List<Cell<String>>> result = TableParser.parseCsvLine(line);
+        Optional<ImmutableList<Cell<String>>> result = TableParser.parseCsvLine(line);
 
-        List<String> expected = List.of("Column 1", "Column 2", "Column 3");
+        ImmutableList<String> expected = ImmutableList.from("Column 1", "Column 2", "Column 3");
 
         Assert.assertTrue(result.isPresent());
-        assertEqualsList(expected, result.get().stream().map(Cell::getValue).collect(Collectors.toList()));
+        Assert.assertTrue(expected.eq(result.get().stream().map(Cell::getValue).toList()));
         Assert.assertTrue(result.get().stream().allMatch(x -> isQuotesWrapped(x.toCsvString())));
         Assert.assertFalse(result.get().stream().allMatch(x -> isQuotesWrapped(x.toConsoleString())));
     }
@@ -38,12 +37,12 @@ public class TableParserTest {
     @Test
     public void parseCsvLine_WithSomeQuotes_Succeed() {
         String line = "Column 1,\"Column 2\",Column 3";
-        Optional<List<Cell<String>>> result = TableParser.parseCsvLine(line);
+        Optional<ImmutableList<Cell<String>>> result = TableParser.parseCsvLine(line);
 
-        List<String> expected = List.of("Column 1", "Column 2", "Column 3");
+        ImmutableList<String> expected = ImmutableList.from("Column 1", "Column 2", "Column 3");
 
         Assert.assertTrue(result.isPresent());
-        assertEqualsList(expected, result.get().stream().map(Cell::getValue).collect(Collectors.toList()));
+        Assert.assertTrue(expected.eq(result.get().stream().map(Cell::getValue).toList()));
         Assert.assertFalse(result.get().stream().limit(1).allMatch(x -> isQuotesWrapped(x.toCsvString())));
         Assert.assertTrue(result.get().stream().skip(1).limit(1).allMatch(x -> isQuotesWrapped(x.toCsvString())));
         Assert.assertFalse(result.get().stream().skip(2).allMatch(x -> isQuotesWrapped(x.toCsvString())));
@@ -53,12 +52,12 @@ public class TableParserTest {
     @Test
     public void parseCsvLine_WithQuotesEscapedDelimiter_Succeed() {
         String line = "Column 1,\"Column, 2\",Column 3";
-        Optional<List<Cell<String>>> result = TableParser.parseCsvLine(line);
+        Optional<ImmutableList<Cell<String>>> result = TableParser.parseCsvLine(line);
 
-        List<String> expected = List.of("Column 1", "Column, 2", "Column 3");
+        ImmutableList<String> expected = ImmutableList.from("Column 1", "Column, 2", "Column 3");
 
         Assert.assertTrue(result.isPresent());
-        assertEqualsList(expected, result.get().stream().map(Cell::getValue).collect(Collectors.toList()));
+        Assert.assertTrue(expected.eq(result.get().stream().map(Cell::getValue).toList()));
         Assert.assertFalse(result.get().stream().limit(1).allMatch(x -> isQuotesWrapped(x.toCsvString())));
         Assert.assertTrue(result.get().stream().skip(1).limit(1).allMatch(x -> isQuotesWrapped(x.toCsvString())));
         Assert.assertFalse(result.get().stream().skip(2).allMatch(x -> isQuotesWrapped(x.toCsvString())));
@@ -68,19 +67,19 @@ public class TableParserTest {
     @Test
     public void parseCsvLine_UnclosedQuotes_Fail() {
         String line = "Column 1,\"Column, 2,Column 3";
-        Optional<List<Cell<String>>> result = TableParser.parseCsvLine(line);
+        Optional<ImmutableList<Cell<String>>> result = TableParser.parseCsvLine(line);
         Assert.assertFalse(result.isPresent());
     }
 
     @Test
     public void parseCsvLine_WithEmptyLastCell_Succeed() {
         String line = "Column 1,Column 2,Column 3,";
-        Optional<List<Cell<String>>> result = TableParser.parseCsvLine(line);
+        Optional<ImmutableList<Cell<String>>> result = TableParser.parseCsvLine(line);
 
-        List<String> expected = List.of("Column 1", "Column 2", "Column 3", "");
+        ImmutableList<String> expected = ImmutableList.from("Column 1", "Column 2", "Column 3", "");
 
         Assert.assertTrue(result.isPresent());
-        assertEqualsList(expected, result.get().stream().map(Cell::getValue).collect(Collectors.toList()));
+        Assert.assertTrue(expected.eq(result.get().stream().map(Cell::getValue).toList()));
         Assert.assertFalse(result.get().stream().allMatch(x -> isQuotesWrapped(x.toCsvString())));
         Assert.assertFalse(result.get().stream().allMatch(x -> isQuotesWrapped(x.toConsoleString())));
     }
@@ -88,12 +87,12 @@ public class TableParserTest {
     @Test
     public void parseCsvLine_WithEmptyLastQuotedCell_Succeed() {
         String line = "Column 1,Column 2,Column 3,\"\"";
-        Optional<List<Cell<String>>> result = TableParser.parseCsvLine(line);
+        Optional<ImmutableList<Cell<String>>> result = TableParser.parseCsvLine(line);
 
-        List<String> expected = List.of("Column 1", "Column 2", "Column 3", "");
+        ImmutableList<String> expected = ImmutableList.from("Column 1", "Column 2", "Column 3", "");
 
         Assert.assertTrue(result.isPresent());
-        assertEqualsList(expected, result.get().stream().map(Cell::getValue).collect(Collectors.toList()));
+        Assert.assertTrue(expected.eq(result.get().stream().map(Cell::getValue).toList()));
         Assert.assertFalse(result.get().stream().limit(3).allMatch(x -> isQuotesWrapped(x.toCsvString())));
         Assert.assertTrue(result.get().stream().skip(3).allMatch(x -> isQuotesWrapped(x.toCsvString())));
         Assert.assertFalse(result.get().stream().allMatch(x -> isQuotesWrapped(x.toConsoleString())));
@@ -101,12 +100,5 @@ public class TableParserTest {
 
     private boolean isQuotesWrapped(String s) {
         return s.startsWith(Const.QUOTES) && s.endsWith(Const.QUOTES);
-    }
-
-    private static <T> void assertEqualsList(List<T> l1, List<T> l2) {
-        Assert.assertEquals(l1.size(), l2.size());
-        for (int i = 0; i < l1.size(); i++) {
-            Assert.assertEquals(l1.get(i), l2.get(i));
-        }
     }
 }
